# SketchFlow

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  resource.rc
src/: Canvas.cpp  Canvas.h  Color.h  Controller.h  Shape.cpp  Shape.h  ToolBar.cpp  ToolBar.h  Tools.cpp  Tools.h  WindowSize.cpp  WindowSize.h  main.cpp
